# Simplify

./: .gitignore  CMakeLists.txt  README.md
Simplify/: element.h  fileio.h  halfedge.cpp  halfedge.h  main.cpp  manifold.h
Simplify.xcodeproj/: project.pbxproj
Simplify.xcodeproj/xcuserdata/matt.xcuserdatad/xcschemes/: Simplify.xcscheme  xcschememanagement.plist
src/: Timer.cpp  Timer.h  collapsible.cpp  collapsible.h  element.h  errorfunction.h  fileio.h  halfedge.cpp  halfedge.h  main.cpp  manifold.cpp  manifold.h  simd.h
